<resources>
    <string name="app_name">ProjetoParceiro</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Esse campo é obrigatório</string>
    <string name="error_not_equals_password">Senhas diferentes</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Dashboard</string>
    <string name="title_activity_login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"> </string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="esqueci_senha">ESQUECI SENHA</string>
    <string name="registrar_se">REGISTRAR-SE</string>
    <string name="voltar_login">Já possui cadastro? Fazer login</string>
    <string name="bt_cadastrar">Cadastrar</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>

    <string name="title_home">Tittle Home</string>
    <string name="title_dashboard">Tittle Dashboard</string>
    <string name="title_notifications">Title Notifications</string>

    <string name="lancamento_data_placeholder">Data de execução</string>
    <string name="lancamento_hora_placeholder">Hora da execução</string>
    <string name="lancamento_cliente_placeholder">Nome do Cliente</string>
    <string name="lancamento_tipo_placeholder">Tipo de atividade (corte de cabelo, escova, …)</string>
    <string name="lancamento_valor_placeholder">Valor (R$)</string>
    <string name="escolher_data">Escolher data</string>
    <string name="escolher_hora">Escolher a hora</string>

    <string name="texto_ok">OK</string>
    <string name="texto_cancelar">CANCELAR</string>
    <string name="atualizar">Atualizar</string>
</resources>
