<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/lancDataHoraWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lancDataWrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/lancData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:hint="@string/lancamento_data_placeholder"
                android:imeOptions="flagNoExtractUi"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/lancDataPickerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="0"
            android:contentDescription="@string/escolher_data"
            app:srcCompat="@drawable/ic_date_range_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lancHoraWrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/lancHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:hint="@string/lancamento_hora_placeholder"
                android:imeOptions="flagNoExtractUi"
                android:inputType="time" />

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/lancHoraPickerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="0"
            android:contentDescription="@string/escolher_hora"
            app:srcCompat="@drawable/ic_access_time_black_24dp" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lancClienteWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lancDataHoraWrap">

        <EditText
            android:id="@+id/lancCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lancamento_cliente_placeholder"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPersonName"
            android:text="" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lancTipoWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lancClienteWrap">

        <EditText
            android:id="@+id/lancTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lancamento_tipo_placeholder"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text"
            android:text="" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lancValorWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lancTipoWrap">

        <EditText
            android:id="@+id/lancValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lancamento_valor_placeholder"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberDecimal"
            android:text="" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/lancBotaoCancelar"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_cancelar"
        app:layout_constraintEnd_toStartOf="@id/lancBotaoOk"
        app:layout_constraintTop_toTopOf="@id/lancBotaoOk" />

    <Button
        android:id="@+id/lancBotaoOk"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lanc_item_margem_vert_longo"
        android:text="@string/texto_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lancValorWrap" />

</android.support.constraint.ConstraintLayout>
